--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ title: Home
 
 <h2>Welcome</h2>
 
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
+<img src="/images/redcabbage_artla_nanzhu2.jpg" style="float: right; margin: 10px;" />
 
-<p>Welcome to my blog!</p>
+<p>Dobrodošli na sajt predmeta <b>Napredne tehnike programiranja</b></p>
 
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
+<p>Ovde možete naći informacije o predmetu</p>
 
-<h2>Posts</h2>
+<h2>Obaveštenja</h2>
 $partial("templates/post-list.html")$
 
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<p>ili možete pogledati arhivu <a href="/archive.html">archives</a>.</p>
