Izmena teksta do arhive

--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@ title: Home
 <h2>Obaveštenja</h2>
 $partial("templates/post-list.html")$
 
-<p>ili možete pogledati arhivu <a href="/archive.html">archives</a>.</p>
+<p>ili pogledajte arhivu <a href="/archive.html">archives</a>.</p>
