--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 ---
-title: Home
+title: Napredne tehnike programiranja
 ---
 
-<h2>Welcome</h2>
+<h2>Dobrodošli</h2>
 
-<img src="/images/redcabbage_artla_nanzhu2.jpg" style="float: right; margin: 10px;" />
+<img src="/images/redcabbage_artla_nanzhu2.jpg" style="float: right; margin: 10px;
+                                                       height: auto;
+                                                       width: auto;
+                                                       max-width: 300px;
+                                                       max-height: 300px;" />
 
-<p>Dobrodošli na sajt predmeta <b>Napredne tehnike programiranja</b></p>
+<p>Predmet <b>Napredne tehnike programiranja</b> slušaju studenti sa smera <b>Softversko inženjerstvo
+    i informacione tehnologije</b> na <i>Fakultetu Tehničkih Nauka</i> u <i>Novom Sadu</i>.</p>
 
 <p>Ovde možete naći informacije o predmetu</p>
+
+<h2>Materijali</h2>
+
+<ul>
+    <li><a href="org/python.html">Python</a></li>
+    <li><a href="org/clojure.html">Clojure</a></li>
+    <li><a href="org/haskell.html">Haskell</a></li>
+</ul>
 
 <h2>Obaveštenja</h2>
 $partial("templates/post-list.html")$
 
-<p>ili pogledajte arhivu <a href="/archive.html">archives</a>.</p>
+<p>ili pogledajte arhivu <a href="/archive.html">arhivu</a>.</p>
