--- a/org/python.html
+++ b/org/python.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="sr" xml:lang="sr">
 <head>
-<!-- 2017-03-23 чет 11:58 -->
+<!-- 2017-03-24 пет 08:04 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Napredne tehnike programiranja - Python</title>
@@ -244,20 +244,20 @@ for the JavaScript code in this tag.
 <h2>Sadr&#382;aj</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org1f598c4">1. Teorija</a></li>
-<li><a href="#org0e8a9f2">2. Napredni Python</a>
+<li><a href="#orga84c79e">1. Teorija</a></li>
+<li><a href="#org21c3ff9">2. Napredni Python</a>
 <ul>
-<li><a href="#orgf74b72d">2.1. <i>virtualenv</i> i <i>pip</i></a></li>
-<li><a href="#org500a889">2.2. Iteratori i generatori</a></li>
-<li><a href="#orga4776af">2.3. Ostale specijalne metode</a></li>
-<li><a href="#org0f697d4">2.4. Deskriptiori</a></li>
-<li><a href="#org6594299">2.5. Dekoratori</a></li>
-<li><a href="#org58fcb01">2.6. <code>functools</code></a></li>
-<li><a href="#org8b28ebb">2.7. <code>itertools</code></a></li>
-<li><a href="#orgce3da5e">2.8. <i>High performance</i> kolekcije</a></li>
-<li><a href="#orga8cdb5d">2.9. Višestruko nasleđivanje</a></li>
-<li><a href="#org7000458">2.10. Meta klase</a></li>
-<li><a href="#org3e88675">2.11. Zadaci</a></li>
+<li><a href="#org5f7b2f3">2.1. <i>virtualenv</i> i <i>pip</i></a></li>
+<li><a href="#org6ade88b">2.2. Iteratori i generatori</a></li>
+<li><a href="#orgb2dda21">2.3. Ostale specijalne metode</a></li>
+<li><a href="#org5312d43">2.4. Deskriptiori</a></li>
+<li><a href="#orgfac3d54">2.5. Dekoratori</a></li>
+<li><a href="#org6f892cb">2.6. <code>functools</code></a></li>
+<li><a href="#org7a26b3b">2.7. <code>itertools</code></a></li>
+<li><a href="#org3d3db43">2.8. <i>High performance</i> kolekcije</a></li>
+<li><a href="#org2b94a50">2.9. Višestruko nasleđivanje</a></li>
+<li><a href="#orgf841a24">2.10. Meta klase</a></li>
+<li><a href="#orgd75b5e1">2.11. Zadaci</a></li>
 </ul>
 </li>
 </ul>
@@ -276,8 +276,8 @@ integrate systems more effectively.
 </p>
 </blockquote>
 
-<div id="outline-container-org1f598c4" class="outline-2">
-<h2 id="org1f598c4"><span class="section-number-2">1</span> Teorija</h2>
+<div id="outline-container-orga84c79e" class="outline-2">
+<h2 id="orga84c79e"><span class="section-number-2">1</span> Teorija</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Svi teorijski materijali nalaze se na <a href="http://www.igordejanovic.net/courses/ntp.html">sajtu profesora</a>.
@@ -285,11 +285,11 @@ Svi teorijski materijali nalaze se na <a href="http://www.igordejanovic.net/cour
 </div>
 </div>
 
-<div id="outline-container-org0e8a9f2" class="outline-2">
-<h2 id="org0e8a9f2"><span class="section-number-2">2</span> Napredni Python</h2>
+<div id="outline-container-org21c3ff9" class="outline-2">
+<h2 id="org21c3ff9"><span class="section-number-2">2</span> Napredni Python</h2>
 <div class="outline-text-2" id="text-2">
-</div><div id="outline-container-orgf74b72d" class="outline-3">
-<h3 id="orgf74b72d"><span class="section-number-3">2.1</span> <i>virtualenv</i> i <i>pip</i></h3>
+</div><div id="outline-container-org5f7b2f3" class="outline-3">
+<h3 id="org5f7b2f3"><span class="section-number-3">2.1</span> <i>virtualenv</i> i <i>pip</i></h3>
 <div class="outline-text-3" id="text-2-1">
 <p>
 Ako Vam koncept <i>virtualenv</i>-a nije poznat pogledajte <a href="https://virtualenv.pypa.io/en/stable/">ovde</a>. Kratak
@@ -298,8 +298,8 @@ podsetnik možete naći <a href="http://docs.python-guide.org/en/latest/dev/virt
 </div>
 </div>
 
-<div id="outline-container-org500a889" class="outline-3">
-<h3 id="org500a889"><span class="section-number-3">2.2</span> Iteratori i generatori</h3>
+<div id="outline-container-org6ade88b" class="outline-3">
+<h3 id="org6ade88b"><span class="section-number-3">2.2</span> Iteratori i generatori</h3>
 <div class="outline-text-3" id="text-2-2">
 <div class="org-src-container">
 <pre class="src src-python"><span style="color: #F0DFAF; font-weight: bold;">def</span> <span style="color: #93E0E3;">generator_foo</span>(n):
@@ -458,8 +458,8 @@ Z
 </div>
 </div>
 
-<div id="outline-container-orga4776af" class="outline-3">
-<h3 id="orga4776af"><span class="section-number-3">2.3</span> Ostale specijalne metode</h3>
+<div id="outline-container-orgb2dda21" class="outline-3">
+<h3 id="orgb2dda21"><span class="section-number-3">2.3</span> Ostale specijalne metode</h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><code>__contains__</code> (in)</li>
@@ -469,12 +469,12 @@ Z
 </div>
 </div>
 
-<div id="outline-container-org0f697d4" class="outline-3">
-<h3 id="org0f697d4"><span class="section-number-3">2.4</span> Deskriptiori</h3>
+<div id="outline-container-org5312d43" class="outline-3">
+<h3 id="org5312d43"><span class="section-number-3">2.4</span> Deskriptiori</h3>
 </div>
 
-<div id="outline-container-org6594299" class="outline-3">
-<h3 id="org6594299"><span class="section-number-3">2.5</span> Dekoratori</h3>
+<div id="outline-container-orgfac3d54" class="outline-3">
+<h3 id="orgfac3d54"><span class="section-number-3">2.5</span> Dekoratori</h3>
 <div class="outline-text-3" id="text-2-5">
 <div class="org-src-container">
 <pre class="src src-python"><span style="color: #F0DFAF; font-weight: bold;">def</span> <span style="color: #93E0E3;">greet</span>(func):
@@ -550,8 +550,8 @@ from dec: 1
 </div>
 </div>
 
-<div id="outline-container-org58fcb01" class="outline-3">
-<h3 id="org58fcb01"><span class="section-number-3">2.6</span> <code>functools</code></h3>
+<div id="outline-container-org6f892cb" class="outline-3">
+<h3 id="org6f892cb"><span class="section-number-3">2.6</span> <code>functools</code></h3>
 <div class="outline-text-3" id="text-2-6">
 <ul class="org-ul">
 <li><code>partial</code></li>
@@ -578,7 +578,7 @@ rečnik:
 </div>
 
 <pre class="example">
-&gt;&gt;&gt; &gt;&gt;&gt; &gt;&gt;&gt; {'b': 2, 'c': 3, 'd': 4, 'a': 1}
+&gt;&gt;&gt; &gt;&gt;&gt; &gt;&gt;&gt; {'b': 2, 'd': 4, 'a': 1, 'c': 3}
 &gt;&gt;&gt; &gt;&gt;&gt; {1: 'a', 2: 'b', 3: 'c', 4: 'd'}
 </pre></li>
 
@@ -587,12 +587,13 @@ rečnik:
 </div>
 </div>
 
-<div id="outline-container-org8b28ebb" class="outline-3">
-<h3 id="org8b28ebb"><span class="section-number-3">2.7</span> <code>itertools</code></h3>
+<div id="outline-container-org7a26b3b" class="outline-3">
+<h3 id="org7a26b3b"><span class="section-number-3">2.7</span> <code>itertools</code></h3>
 <div class="outline-text-3" id="text-2-7">
 <ul class="org-ul">
-<li><code>chain</code></li>
-</ul>
+<li><p>
+<code>chain</code>
+</p>
 
 <div class="org-src-container">
 <pre class="src src-python"><span style="color: #F0DFAF; font-weight: bold;">import</span> itertools <span style="color: #F0DFAF; font-weight: bold;">as</span> it
@@ -612,9 +613,8 @@ c
 1
 2
 3
-</pre>
+</pre></li>
 
-<ul class="org-ul">
 <li><p>
 <code>takewhile</code>
 </p>
@@ -665,8 +665,8 @@ Z
 </div>
 </div>
 
-<div id="outline-container-orgce3da5e" class="outline-3">
-<h3 id="orgce3da5e"><span class="section-number-3">2.8</span> <i>High performance</i> kolekcije</h3>
+<div id="outline-container-org3d3db43" class="outline-3">
+<h3 id="org3d3db43"><span class="section-number-3">2.8</span> <i>High performance</i> kolekcije</h3>
 <div class="outline-text-3" id="text-2-8">
 <ul class="org-ul">
 <li><p>
@@ -724,16 +724,16 @@ time elapsed : 1.1920928955078125e-06
 </div>
 </div>
 
-<div id="outline-container-orga8cdb5d" class="outline-3">
-<h3 id="orga8cdb5d"><span class="section-number-3">2.9</span> Višestruko nasleđivanje</h3>
+<div id="outline-container-org2b94a50" class="outline-3">
+<h3 id="org2b94a50"><span class="section-number-3">2.9</span> Višestruko nasleđivanje</h3>
 </div>
 
-<div id="outline-container-org7000458" class="outline-3">
-<h3 id="org7000458"><span class="section-number-3">2.10</span> Meta klase</h3>
+<div id="outline-container-orgf841a24" class="outline-3">
+<h3 id="orgf841a24"><span class="section-number-3">2.10</span> Meta klase</h3>
 </div>
 
-<div id="outline-container-org3e88675" class="outline-3">
-<h3 id="org3e88675"><span class="section-number-3">2.11</span> Zadaci</h3>
+<div id="outline-container-orgd75b5e1" class="outline-3">
+<h3 id="orgd75b5e1"><span class="section-number-3">2.11</span> Zadaci</h3>
 <div class="outline-text-3" id="text-2-11">
 <ol class="org-ol">
 <li>Napraviti klasu <code>GithubUser</code> čiji svaki objekat pri konstrukciji
@@ -771,7 +771,7 @@ koristeći njegovu <code>self.__iter__</code> metodu.</li>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Novak Boškov</p>
-<p class="date">Created: 2017-03-23 чет 11:58</p>
+<p class="date">Created: 2017-03-24 пет 08:04</p>
 <p class="validation"></p>
 </div>
 </body>
