--- a/org/clojure.html
+++ b/org/clojure.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="sr" xml:lang="sr">
 <head>
-<!-- 2017-03-22 сре 16:12 -->
+<!-- 2017-04-02 нед 12:30 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Napredne tehnike programiranja - Clojure</title>
@@ -244,44 +244,44 @@ for the JavaScript code in this tag.
 <h2>Sadr&#382;aj</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbfb69e7">1. Uvod</a>
+<li><a href="#org4786eb7">1. Uvod</a>
 <ul>
-<li><a href="#orgb8efdd9">1.1. Lisp</a>
+<li><a href="#orgb4b399b">1.1. Lisp</a>
 <ul>
-<li><a href="#org50e8f77">1.1.1. Scheme</a></li>
+<li><a href="#org894f9d0">1.1.1. Scheme</a></li>
 </ul>
 </li>
-<li><a href="#org883a5c7">1.2. Imperativno vs funckionalno programiranje</a></li>
-<li><a href="#orgb556466">1.3. Funkcionalni način razmišljanja</a></li>
-<li><a href="#org099960e">1.4. Clojure u standardnim OO problemima</a></li>
+<li><a href="#orgcf2719c">1.2. Imperativno vs funckionalno programiranje</a></li>
+<li><a href="#org0b81bd6">1.3. Funkcionalni način razmišljanja</a></li>
+<li><a href="#org26360a1">1.4. Clojure u standardnim OO problemima</a></li>
 </ul>
 </li>
-<li><a href="#orgb442125">2. Elementi jezika</a>
+<li><a href="#orgf5c2455">2. Elementi jezika</a>
 <ul>
-<li><a href="#org8bfca10">2.1. <i>Homoiconicy</i> &#x2014; "istoizglednost"</a></li>
+<li><a href="#org4256076">2.1. <i>Homoiconicy</i> &#x2014; "istoizglednost"</a></li>
 </ul>
 </li>
-<li><a href="#orgbbc92d3">3. REPL i IDE</a></li>
-<li><a href="#org85cb4a8">4. Read, evaluate vrtlog i makroi</a></li>
-<li><a href="#org46f5bbc">5. Konkurentno i paralelno programiranje</a>
+<li><a href="#org4210508">3. REPL i IDE</a></li>
+<li><a href="#org91e1c4c">4. Read, evaluate vrtlog i makroi</a></li>
+<li><a href="#org7bd3622">5. Konkurentno i paralelno programiranje</a>
 <ul>
-<li><a href="#orga897ab3">5.1. Reference</a></li>
-<li><a href="#orgcb7bf7b">5.2. core.async</a></li>
+<li><a href="#orgf6c9dd5">5.1. Reference</a></li>
+<li><a href="#orgaddbe7a">5.2. core.async</a></li>
 </ul>
 </li>
-<li><a href="#org27b45ec">6. Interakcija sa platformom</a></li>
-<li><a href="#org9d9b138">7. Apstrakcije</a>
+<li><a href="#org596fa12">6. Interakcija sa platformom</a></li>
+<li><a href="#org91c9b25">7. Apstrakcije</a>
 <ul>
-<li><a href="#orgbae9149">7.1. Multimethods</a></li>
-<li><a href="#orgf9cd42f">7.2. Protocols</a></li>
-<li><a href="#orgd2204cb">7.3. Records</a></li>
-<li><a href="#org4da08e5">7.4. clojure.spec</a></li>
+<li><a href="#org4a74e56">7.1. Multimethods</a></li>
+<li><a href="#orgde9de6c">7.2. Protocols</a></li>
+<li><a href="#org515f2a3">7.3. Records</a></li>
+<li><a href="#org9cfc3f9">7.4. clojure.spec</a></li>
 </ul>
 </li>
-<li><a href="#orgb6b5331">8. ClojureScript</a></li>
-<li><a href="#org7c0dace">9. Reader conditionals (.cljc)</a></li>
-<li><a href="#org5a97742">10. ClojureCLR</a></li>
-<li><a href="#orgc12799b">11. Literatura</a></li>
+<li><a href="#org3f21164">8. ClojureScript</a></li>
+<li><a href="#orgf6ce917">9. Reader conditionals (.cljc)</a></li>
+<li><a href="#org0f4951e">10. ClojureCLR</a></li>
+<li><a href="#orgf66f5eb">11. Literatura</a></li>
 </ul>
 </div>
 </div>
@@ -317,8 +317,8 @@ system that ensure clean, correct, multithreaded designs.
 </p>
 </blockquote>
 
-<div id="outline-container-orgbfb69e7" class="outline-2">
-<h2 id="orgbfb69e7"><span class="section-number-2">1</span> Uvod</h2>
+<div id="outline-container-org4786eb7" class="outline-2">
+<h2 id="org4786eb7"><span class="section-number-2">1</span> Uvod</h2>
 <div class="outline-text-2" id="text-1">
 <blockquote>
 <p>
@@ -333,35 +333,83 @@ in the expert's mind there are few.
 </blockquote>
 </div>
 
-<div id="outline-container-orgb8efdd9" class="outline-3">
-<h3 id="orgb8efdd9"><span class="section-number-3">1.1</span> Lisp</h3>
+<div id="outline-container-orgb4b399b" class="outline-3">
+<h3 id="orgb4b399b"><span class="section-number-3">1.1</span> Lisp</h3>
 <div class="outline-text-3" id="text-1-1">
-</div><div id="outline-container-org50e8f77" class="outline-4">
-<h4 id="org50e8f77"><span class="section-number-4">1.1.1</span> Scheme</h4>
+<p>
+<b>Lisp</b> ili <b>LISP</b> je porodica programskih jezika sa dugom
+istorijom. Na prvi pogled ga karakteriše prefiksna notacija i
+izrazi u zagradama. Prvobitno je specificiran 1956. godine od
+strane <a href="https://en.wikipedia.org/wiki/John_McCarthy_(computer_scientist)">John McCarthy</a>-a za potrebe njegovih istraživanja u oblasti
+veštačke inteligencije (<i>McCarthy</i> je inače i smislio naziv
+<i>artificial intelligence</i> - <i>AI</i>). Lisp je drugi najstariji
+programski jezik visokog nivoa, samo je <i>Fortran</i> jednu godinu
+stariji, a poređenja radi:
+</p>
+<ul class="org-ul">
+<li><a href="https://en.wikipedia.org/wiki/C_(programming_language)">C</a> se pojavio 1972.</li>
+<li><a href="https://en.wikipedia.org/wiki/C%2B%2B">C++</a> 1983.</li>
+<li><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">Python</a> 1991 (kada i <a href="https://en.wikipedia.org/wiki/Visual_Basic">Visual Basic</a>).</li>
+<li><a href="https://en.wikipedia.org/wiki/Java_(programming_language)">Java</a> 1995.</li>
+<li><a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)">C#</a> 2000.</li>
+</ul>
+
+<p>
+Lisp je konstruisan kao matematička notacija za kompjuterske
+programe inspirisana <a href="https://en.wikipedia.org/wiki/Lambda_calculus">Lambda računom</a>(<a href="https://en.wikipedia.org/wiki/Alonzo_Church">Alonzo Church</a>). Ovaj način
+predstave programa doneo je mnoge ideje u kompjuterske nauke:
+</p>
+<ul class="org-ul">
+<li>strukture tipa stabla</li>
+<li>automatsko upravljanje memorijom (garbage collector)</li>
+<li><i>dynamic typing</i></li>
+<li>kondicionale (grananje)</li>
+<li>funkcije višeg reda</li>
+<li>rekurziju i rekurzivan opis podataka</li>
+<li>self-hosting kompajler</li>
+<li>REPL itd.</li>
+</ul>
+
+<p>
+Veliki broj navedenih stvari inspirisao je programske jezike koji
+su nastali nakon Lisp-a (tj. skoro sve programske jezike) ali neki
+od korisnih koncepata iz Lisp-a se i dan dans smatraju naprednim i
+još uvek nisu podržani u pojedinim jezicima koji se intenzivno
+koriste.
+</p>
+
+<p>
+Matematičku formulaciju Lisp-a i koncepata koje ona donosi nadalje
+pogledajte <a href="../resources/perzistencija_clojure.pdf">ovde</a> (poglavlja 1.1, 1.2 i 1.3).
+</p>
+</div>
+
+<div id="outline-container-org894f9d0" class="outline-4">
+<h4 id="org894f9d0"><span class="section-number-4">1.1.1</span> Scheme</h4>
 <div class="outline-text-4" id="text-1-1-1">
-</div><ol class="org-ol"><li><a id="org4875c4b"></a>Chez Scheme (Cisco)<br /></li>
+</div><ol class="org-ol"><li><a id="org4771293"></a>Chez Scheme (Cisco)<br /></li>
 
-<li><a id="orgded850f"></a>Racket lang<br /></li></ol>
+<li><a id="orgb8cfb8c"></a>Racket lang<br /></li></ol>
 </div>
 </div>
-<div id="outline-container-org883a5c7" class="outline-3">
-<h3 id="org883a5c7"><span class="section-number-3">1.2</span> Imperativno vs funckionalno programiranje</h3>
-</div>
-
-<div id="outline-container-orgb556466" class="outline-3">
-<h3 id="orgb556466"><span class="section-number-3">1.3</span> Funkcionalni način razmišljanja</h3>
+<div id="outline-container-orgcf2719c" class="outline-3">
+<h3 id="orgcf2719c"><span class="section-number-3">1.2</span> Imperativno vs funckionalno programiranje</h3>
 </div>
 
-<div id="outline-container-org099960e" class="outline-3">
-<h3 id="org099960e"><span class="section-number-3">1.4</span> Clojure u standardnim OO problemima</h3>
+<div id="outline-container-org0b81bd6" class="outline-3">
+<h3 id="org0b81bd6"><span class="section-number-3">1.3</span> Funkcionalni način razmišljanja</h3>
+</div>
+
+<div id="outline-container-org26360a1" class="outline-3">
+<h3 id="org26360a1"><span class="section-number-3">1.4</span> Clojure u standardnim OO problemima</h3>
 </div>
 </div>
 
-<div id="outline-container-orgb442125" class="outline-2">
-<h2 id="orgb442125"><span class="section-number-2">2</span> Elementi jezika</h2>
+<div id="outline-container-orgf5c2455" class="outline-2">
+<h2 id="orgf5c2455"><span class="section-number-2">2</span> Elementi jezika</h2>
 <div class="outline-text-2" id="text-2">
-</div><div id="outline-container-org8bfca10" class="outline-3">
-<h3 id="org8bfca10"><span class="section-number-3">2.1</span> <i>Homoiconicy</i> &#x2014; "istoizglednost"</h3>
+</div><div id="outline-container-org4256076" class="outline-3">
+<h3 id="org4256076"><span class="section-number-3">2.1</span> <i>Homoiconicy</i> &#x2014; "istoizglednost"</h3>
 <div class="outline-text-3" id="text-2-1">
 
 <div class="figure">
@@ -387,64 +435,64 @@ zamišljamo.
 </div>
 </div>
 
-<div id="outline-container-orgbbc92d3" class="outline-2">
-<h2 id="orgbbc92d3"><span class="section-number-2">3</span> REPL i IDE</h2>
+<div id="outline-container-org4210508" class="outline-2">
+<h2 id="org4210508"><span class="section-number-2">3</span> REPL i IDE</h2>
 </div>
 
-<div id="outline-container-org85cb4a8" class="outline-2">
-<h2 id="org85cb4a8"><span class="section-number-2">4</span> Read, evaluate vrtlog i makroi</h2>
+<div id="outline-container-org91e1c4c" class="outline-2">
+<h2 id="org91e1c4c"><span class="section-number-2">4</span> Read, evaluate vrtlog i makroi</h2>
 </div>
 
-<div id="outline-container-org46f5bbc" class="outline-2">
-<h2 id="org46f5bbc"><span class="section-number-2">5</span> Konkurentno i paralelno programiranje</h2>
+<div id="outline-container-org7bd3622" class="outline-2">
+<h2 id="org7bd3622"><span class="section-number-2">5</span> Konkurentno i paralelno programiranje</h2>
 <div class="outline-text-2" id="text-5">
-</div><div id="outline-container-orga897ab3" class="outline-3">
-<h3 id="orga897ab3"><span class="section-number-3">5.1</span> Reference</h3>
+</div><div id="outline-container-orgf6c9dd5" class="outline-3">
+<h3 id="orgf6c9dd5"><span class="section-number-3">5.1</span> Reference</h3>
 </div>
 
-<div id="outline-container-orgcb7bf7b" class="outline-3">
-<h3 id="orgcb7bf7b"><span class="section-number-3">5.2</span> core.async</h3>
+<div id="outline-container-orgaddbe7a" class="outline-3">
+<h3 id="orgaddbe7a"><span class="section-number-3">5.2</span> core.async</h3>
 </div>
 </div>
 
-<div id="outline-container-org27b45ec" class="outline-2">
-<h2 id="org27b45ec"><span class="section-number-2">6</span> Interakcija sa platformom</h2>
+<div id="outline-container-org596fa12" class="outline-2">
+<h2 id="org596fa12"><span class="section-number-2">6</span> Interakcija sa platformom</h2>
 </div>
 
-<div id="outline-container-org9d9b138" class="outline-2">
-<h2 id="org9d9b138"><span class="section-number-2">7</span> Apstrakcije</h2>
+<div id="outline-container-org91c9b25" class="outline-2">
+<h2 id="org91c9b25"><span class="section-number-2">7</span> Apstrakcije</h2>
 <div class="outline-text-2" id="text-7">
-</div><div id="outline-container-orgbae9149" class="outline-3">
-<h3 id="orgbae9149"><span class="section-number-3">7.1</span> Multimethods</h3>
+</div><div id="outline-container-org4a74e56" class="outline-3">
+<h3 id="org4a74e56"><span class="section-number-3">7.1</span> Multimethods</h3>
 </div>
 
-<div id="outline-container-orgf9cd42f" class="outline-3">
-<h3 id="orgf9cd42f"><span class="section-number-3">7.2</span> Protocols</h3>
+<div id="outline-container-orgde9de6c" class="outline-3">
+<h3 id="orgde9de6c"><span class="section-number-3">7.2</span> Protocols</h3>
 </div>
 
-<div id="outline-container-orgd2204cb" class="outline-3">
-<h3 id="orgd2204cb"><span class="section-number-3">7.3</span> Records</h3>
+<div id="outline-container-org515f2a3" class="outline-3">
+<h3 id="org515f2a3"><span class="section-number-3">7.3</span> Records</h3>
 </div>
 
-<div id="outline-container-org4da08e5" class="outline-3">
-<h3 id="org4da08e5"><span class="section-number-3">7.4</span> clojure.spec</h3>
+<div id="outline-container-org9cfc3f9" class="outline-3">
+<h3 id="org9cfc3f9"><span class="section-number-3">7.4</span> clojure.spec</h3>
 </div>
 </div>
 
-<div id="outline-container-orgb6b5331" class="outline-2">
-<h2 id="orgb6b5331"><span class="section-number-2">8</span> ClojureScript</h2>
+<div id="outline-container-org3f21164" class="outline-2">
+<h2 id="org3f21164"><span class="section-number-2">8</span> ClojureScript</h2>
 </div>
 
-<div id="outline-container-org7c0dace" class="outline-2">
-<h2 id="org7c0dace"><span class="section-number-2">9</span> Reader conditionals (.cljc)</h2>
+<div id="outline-container-orgf6ce917" class="outline-2">
+<h2 id="orgf6ce917"><span class="section-number-2">9</span> Reader conditionals (.cljc)</h2>
 </div>
 
-<div id="outline-container-org5a97742" class="outline-2">
-<h2 id="org5a97742"><span class="section-number-2">10</span> ClojureCLR</h2>
+<div id="outline-container-org0f4951e" class="outline-2">
+<h2 id="org0f4951e"><span class="section-number-2">10</span> ClojureCLR</h2>
 </div>
 
-<div id="outline-container-orgc12799b" class="outline-2">
-<h2 id="orgc12799b"><span class="section-number-2">11</span> Literatura</h2>
+<div id="outline-container-orgf66f5eb" class="outline-2">
+<h2 id="orgf66f5eb"><span class="section-number-2">11</span> Literatura</h2>
 <div class="outline-text-2" id="text-11">
 <ul class="org-ul">
 <li><a href="http://www.braveclojure.com/">Clojure For The Brave and True</a> &#x2014; Daniel Higginbotham</li>
@@ -459,7 +507,7 @@ Abelson, Gerald Jay Sussman with Julie Sussman (sa video
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Novak Boškov</p>
-<p class="date">Created: 2017-03-22 сре 16:12</p>
+<p class="date">Created: 2017-04-02 нед 12:30</p>
 <p class="validation"></p>
 </div>
 </body>
